<resources>
    <string name="app_name">MidPrac</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="milk">Milk $3</string>
    <string name="egg">Eggs $2</string>
    <string name="beef">Beef $23</string>
    <string name="soda">Soda $1</string>
    <string name="biscuit">Biscuits $2.5</string>
    <string name="fruit">Fruit $6.5</string>
    <string name="veges">Veges $4</string>
    <string name="total">Total</string>
    <string name="sum">$</string>
    <string name="check_out">CHECK OUT</string>



</resources>